# GLiNER

./: .buildinfo  .gitignore  README.md  README_Extended.md  RELEASE.md  add_custom_architecture.html  architectures.html  compose.yml  config.yaml  config_finetune.yaml  config_large.yaml  config_span.yaml  config_token.yaml  configs.html  convert_to_onnx.html  convert_to_onnx.py  create_job.py  custom_train.py  demo.py  docker-compose.yml  docker-entrypoint.sh  eval.py  genindex.html  gliner_spacy.py  index.html  instalation.html  intro.html  model.py  notebook.ipynb  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  save_load.py  search.html  searchindex.js  serving.html  spacy-demo.ipynb  test.ipynb  (+5 more)
.doctrees/: add_custom_architecture.doctree  architectures.doctree  configs.doctree  convert_to_onnx.doctree  environment.pickle  index.doctree  instalation.doctree  intro.doctree  quickstart.doctree  serving.doctree  training.doctree  usage.doctree
.doctrees/api/: gliner.config.doctree  gliner.data_processing.collator.doctree  gliner.data_processing.doctree  gliner.data_processing.processor.doctree  gliner.data_processing.tokenizer.doctree  gliner.data_processing.utils.doctree  gliner.decoding.decoder.doctree  gliner.decoding.doctree  gliner.decoding.trie.doctree  gliner.decoding.trie.labels_trie.doctree  gliner.decoding.trie.python_labels_trie.doctree  gliner.decoding.utils.doctree  gliner.doctree  gliner.evaluation.doctree  gliner.evaluation.evaluate_ner.doctree  gliner.evaluation.evaluator.doctree  gliner.evaluation.utils.doctree  gliner.infer_packing.doctree  gliner.model.doctree  gliner.modeling.base.doctree  gliner.modeling.decoder.doctree  gliner.modeling.doctree  gliner.modeling.encoder.doctree  gliner.modeling.layers.doctree  gliner.modeling.loss_functions.doctree  gliner.modeling.multitask.doctree  gliner.modeling.multitask.relations_layers.doctree  gliner.modeling.multitask.triples_layers.doctree  gliner.modeling.outputs.doctree  gliner.modeling.scorers.doctree  gliner.modeling.span_rep.doctree  gliner.modeling.utils.doctree  gliner.multitask.base.doctree  gliner.multitask.classification.doctree  gliner.multitask.doctree  gliner.multitask.open_extraction.doctree  gliner.multitask.question_answering.doctree  gliner.multitask.relation_extraction.doctree  gliner.multitask.summarization.doctree  gliner.onnx.doctree  (+10 more)
.github/workflows/: deploy.yaml  release.yaml  tests.yml
_modules/: index.html
_modules/gliner/: config.html  infer_packing.html  model.html  utils.html
_sources/: architectures.md.txt  convert_to_onnx.md.txt  training.md.txt  usage.md.txt
_sources/api/: gliner.config.rst.txt  gliner.data_processing.collator.rst.txt  gliner.data_processing.processor.rst.txt  gliner.data_processing.rst.txt  gliner.data_processing.tokenizer.rst.txt  gliner.data_processing.utils.rst.txt  gliner.decoding.decoder.rst.txt  gliner.decoding.rst.txt  gliner.decoding.trie.labels_trie.rst.txt  (+41 more)
_static/: documentation_options.js
api/: gliner.config.html  gliner.data_processing.collator.html  gliner.data_processing.html  gliner.data_processing.processor.html  gliner.data_processing.tokenizer.html  gliner.data_processing.utils.html  gliner.decoding.decoder.html  gliner.decoding.html  gliner.decoding.trie.html  gliner.decoding.trie.labels_trie.html  gliner.decoding.trie.python_labels_trie.html  gliner.decoding.utils.html  gliner.evaluation.evaluate_ner.html  gliner.evaluation.evaluator.html  gliner.evaluation.html  gliner.evaluation.utils.html  gliner.html  gliner.infer_packing.html  gliner.model.html  gliner.modeling.base.html  gliner.modeling.decoder.html  gliner.modeling.encoder.html  gliner.modeling.html  gliner.modeling.layers.html  gliner.modeling.loss_functions.html  gliner.modeling.multitask.html  gliner.modeling.multitask.relations_layers.html  gliner.modeling.multitask.triples_layers.html  gliner.modeling.outputs.html  gliner.modeling.scorers.html  gliner.modeling.span_rep.html  gliner.modeling.utils.html  gliner.multitask.base.html  gliner.multitask.classification.html  gliner.multitask.html  gliner.multitask.open_extraction.html  gliner.multitask.question_answering.html  gliner.multitask.relation_extraction.html  gliner.multitask.summarization.html  gliner.onnx.html  (+10 more)
bench/: bench_gliner_e2e.py  bench_infer_packing.py
benchmarks/: BENCHMARK_batch_level_decoding.md  bench_batch_decode_pr.py  bench_batch_decode_results.json  bench_infer_packing.py  bench_int8.py  bench_int8_20260324_223547.json  bench_int8_20260324_224639.json  bench_int8_20260324_225550.json  bench_quantization.py  bench_quantize_flash.py  eval_compressed_biomed.py  quantization_benchmark_final.json
configs/: config.yaml  config_biencoder.yaml  config_decoder.yaml  config_relex.yaml  config_span.yaml  config_token.yaml
data/: process_nuner.py  process_pilener.py
docs/: add_custom_architecture.md  architectures.md  conf.py  configs.md  convert_to_onnx.md  flash_attention.md  index.md  instalation.md  intro.md  quickstart.md  relation_extraction.md  requirements.txt  serving.md  usage.md  vocab_pruning.md
examples/: convert_to_onnx.ipynb  exal_example_conll.ipynb  finetune.ipynb  gliner_spacy_demo.ipynb  load_local_model.ipynb  quickstart-Copy1.ipynb  quickstart.ipynb  sample_data.json  simple.ipynb  synthetic_data_generation.ipynb  trainer.py
gliner/: __init__.py  config.py  descriptions.py  infer_packing.py  long_doc.py  model.py  trainer.py  utils.py
modules/: base.py  data_proc.py  evaluator.py  layers.py  run_evaluation.py  span_rep.py  token_rep.py
scripts/: baseline_eval.py  benchmark_flash_attention.py  convert_to_onnx.py  convert_to_openvino.py  custom_train.py  prune_gliner_vocab.py  run_onnx_relex.py  train_ablation.py  train_relex.py  validate_pruned_model.py  visualize_results.py
tests/: test_data_processing.py  test_decoder.py  test_features_selection.py  test_infer_packing.py  test_local_files_only.py  test_modeling.py  test_modelling.py  test_models.py  test_quantize_and_dtype.py  test_serve.py  test_tokenizer_stanza.py  utils_infer.py
(+133 files in other folders)
